<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.openharness</groupId>
    <artifactId>openharness-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>OpenHarness Java</name>
    <description>Open-source Java port of OpenHarness AI coding assistant</description>

    <modules>
        <module>openharness-common</module>
        <module>openharness-config</module>
        <module>openharness-api</module>
        <module>openharness-engine</module>
        <module>openharness-extensions</module>
        <module>openharness-tools</module>
        <module>openharness-ui</module>
        <module>openharness-cli</module>
        <module>openharness-ohmo</module>
        <module>openharness-observability</module>
        <module>openharness-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Core dependency versions -->
        <jackson.version>2.17.0</jackson.version>
        <picocli.version>4.7.6</picocli.version>
        <jline.version>3.25.1</jline.version>
        <jansi.version>2.4.1</jansi.version>
        <okhttp.version>4.12.0</okhttp.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <cron-utils.version>9.2.1</cron-utils.version>
        <caffeine.version>3.1.8</caffeine.version>

        <!-- Observability versions -->
        <micrometer.version>1.13.0</micrometer.version>
        <opentelemetry.version>1.38.0</opentelemetry.version>
        <logback.version>1.5.6</logback.version>
        <logstash.logback.version>7.4</logstash.logback.version>
        <slf4j.version>2.0.13</slf4j.version>

        <!-- Test versions -->
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.12.0</mockito.version>
        <testcontainers.version>1.19.8</testcontainers.version>
        <wiremock.version>3.5.4</wiremock.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- JLine 3 (TUI) -->
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-terminal</artifactId>
                <version>${jline.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-reader</artifactId>
                <version>${jline.version}</version>
            </dependency>
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>${jansi.version}</version>
            </dependency>

            <!-- Jackson BOM -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- OpenTelemetry BOM -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Micrometer BOM -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-bom</artifactId>
                <version>${micrometer.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- JUnit BOM -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- WireMock -->
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-extensions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-cli</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-ohmo</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openharness</groupId>
                <artifactId>openharness-observability</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- SLF4J + Logback (all modules) -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JUnit 5 + Mockito (all modules test) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Testcontainers + WireMock (all modules test) -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wiremock</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>info.picocli</groupId>
                                <artifactId>picocli-codegen</artifactId>
                                <version>${picocli.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <includes>
                            <include>**/*IT.java</include>
                            <include>**/*IntegrationTest.java</include>
                        </includes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.3</version>
                </plugin>

                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.12</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
